--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint --ext .ts,.tsx ."
   },
   "keywords": [],
+  "author": "Sheherezadhe",
   "license": "GNU GPL V3",
   "config": {
     "forge": {
