--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "awair-uploader",
-  "productName": "awair-uploader",
+  "productName": "Awair-Uploader",
   "version": "1.0.2",
   "description": "An Awair Element data uploader",
   "main": ".webpack/main",
@@ -21,13 +21,12 @@
     "forge": {
       "packagerConfig": {},
       "makers": [
-        {"commented-for-raspi":
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
             "name": "awair-uploader"
           }
-        }},
+        },
         {
           "name": "@electron-forge/maker-zip",
           "platforms": [
@@ -53,7 +52,7 @@
           "@electron-forge/plugin-webpack",
           {
             "mainConfig": "./webpack.main.config.js",
-            "devContentSecurityPolicy": "connect-src 'self' http://wearableapi.planetwatch.io http://login.planetwatch.io https://developer-apis.awair.is 'unsafe-eval'",
+            "devContentSecurityPolicy": "connect-src 'self' http://wearableapi.test.planetwatch.io http://login.planetwatch.io https://developer-apis.awair.is 'unsafe-eval'",
             "renderer": {
               "config": "./webpack.renderer.config.js",
               "entryPoints": [
@@ -82,7 +81,6 @@
     "@types/luxon": "^2.3.1",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "@types/react-timeago": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.9.1",
     "@vercel/webpack-asset-relocator-loader": "^1.7.0",
@@ -107,13 +105,13 @@
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.17.3",
     "http-server": "^14.1.0",
+    "javascript-time-ago": "^2.3.13",
     "jwt-decode": "^3.1.2",
     "keycloak-js": "^17.0.0",
     "luxon": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.2",
-    "react-timeago": "^6.2.1"
+    "react-router-dom": "^6.2.2"
   }
 }
