--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "makepi" : "electron-forge make --arch armv7l",
+    "makepi": "electron-forge make --arch armv7l",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx ."
   },
@@ -81,6 +81,7 @@
     "@types/luxon": "^2.3.1",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-timeago": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.9.1",
     "@vercel/webpack-asset-relocator-loader": "^1.7.0",
@@ -112,6 +113,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "react-timeago": "^6.2.1"
   }
 }
